infrastructure/eks/manifests/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-service
  template:
    metadata:
      labels:
        app: hello-service
    spec:
      containers:
        - name: hello-service
          image: 533612070969.dkr.ecr.us-east-1.amazonaws.com/streaming-hello-service:latest
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
