infrastructure/eks/manifests/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: ClusterIP
  selector:
    app: hello-service
  ports:
    - port: 3001
      targetPort: 3001
