infrastructure/eks/manifests/profile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-service
spec:
  type: ClusterIP
  selector:
    app: profile-service
  ports:
    - port: 3002
      targetPort: 3002
